--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="aCBCL_MwVoGmMDKODeiAghyYKAVAAcns6Qch0AqZ8UE" />
     <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
+    <title>Will Bennett's Portfolio</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
