--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="aCBCL_MwVoGmMDKODeiAghyYKAVAAcns6Qch0AqZ8UE" />
+    <meta name="google-site-verification" content="w50DMhzJgVV4QhbCfhKBIHVQGHUGbqSfK9WRsIL8DdY" />
     <!-- TODO: Set the document title to the name of your application -->
     <title>Will Bennett's Portfolio</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="My Personal Portfolio for my work as a developer and fun side projects to learn skills in automation, web development, and more" />
+    <meta name="author" content="Will Bennett" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Will Bennett's Portfolio" />
+    <meta property="og:description" content="My Personal Portfolio for my work as a developer and fun side projects to learn skills in automation, web development, and more" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
